--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,12 +9,14 @@ android {
         versionCode 2
         versionName "1.1"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        multiDexEnabled true
     }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+
     }
     sourceSets {
         main {
@@ -24,10 +26,17 @@ android {
     lintOptions {
         abortOnError false
     }
+    repositories {
+        flatDir {
+            dirs 'libs'
+        }
+    }
 }
 
 dependencies {
     api fileTree(include: ['*.jar'], dir: 'libs')
+    implementation(name: 'blesdk', ext: 'aar')
+
     implementation 'com.android.support:appcompat-v7:26.0.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
     implementation 'com.android.support:design:26.0.1'
@@ -47,4 +56,7 @@ dependencies {
     implementation 'io.reactivex.rxjava2:rxjava:2.0.3'
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
     implementation 'org.greenrobot:eventbus:3.0.0'
+
+    implementation 'com.google.protobuf:protobuf-java:3.6.1'
+    implementation 'com.android.support:multidex:1.0.3'
 }
