--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,9 +18,9 @@
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
 
     <!-- &lt;!&ndash; 在SDCard中创建与删除文件权限 &ndash;&gt; -->
-    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
+    <!--<uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />-->
     <!-- 往SDCard写入数据权限 -->
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <!--<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />-->
     <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
 
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
@@ -40,7 +40,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/mapapk"
         android:supportsRtl="true"
-        android:theme="@android:style/Theme.Holo.Light"
+        android:theme="@style/AppTheme"
         android:screenOrientation="portrait">
 
         <!-- android:theme="@style/AppTheme"> -->
