--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,8 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.MOUNT_FORMAT_FILESYSTEMS" />
 
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+
     <!-- 网络权限 -->
     <uses-permission android:name="android.permission.INTERNET" />
 
