--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,15 +1,40 @@
 apply plugin: 'com.android.application'
 
 android {
+    signingConfigs {
+        factory {
+            keyAlias 'factory'
+            keyPassword '123456'
+            storeFile file('/Users/ck/Desktop/TestCase/app/src/factorysign')
+            storePassword '123456'
+        }
+    }
     compileSdkVersion 26
     defaultConfig {
         applicationId "com.example.ck.myble"
         minSdkVersion 18
         targetSdkVersion 26
-        versionCode 2
-        versionName "1.1"
+        versionCode 3
+        versionName "1.2"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         multiDexEnabled true
+        flavorDimensions "versionCode"
+    }
+    productFlavors {
+        bracelet {
+            applicationId "com.example.ck.bracelet"
+            manifestPlaceholders = [
+                    app_icon: "@mipmap/blueimg"//桌面图标
+            ]
+            resValue "string", "app_name", "手环"//应用名称
+        }
+        watch {
+            applicationId "com.example.ck.watch"
+            manifestPlaceholders = [
+                    app_icon: "@mipmap/redimg"//桌面图标
+            ]
+            resValue "string", "app_name", "手表"//应用名称
+        }
     }
     buildTypes {
         release {
@@ -31,13 +56,11 @@ android {
             dirs 'libs'
         }
     }
-
 }
 
 dependencies {
     api fileTree(include: ['*.jar'], dir: 'libs')
     implementation(name: 'blesdk190701', ext: 'aar')
-
     implementation 'com.android.support:appcompat-v7:26.0.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
     implementation 'com.android.support:design:26.0.1'
@@ -57,7 +80,6 @@ dependencies {
     implementation 'io.reactivex.rxjava2:rxjava:2.0.3'
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
     implementation 'org.greenrobot:eventbus:3.0.0'
-
     implementation 'com.google.protobuf:protobuf-java:3.6.1'
     implementation 'com.android.support:multidex:1.0.3'
 }
