--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,16 +38,12 @@
     <application
         android:name=".MyApplication"
         android:allowBackup="true"
-        android:icon="@mipmap/floapk"
+        android:icon="${app_icon}"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/mapapk"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:screenOrientation="portrait">
-
-        <!-- android:theme="@style/AppTheme"> -->
-        <!-- android:theme="@android:style/Theme.Holo.Light"> -->
-        <!-- android:theme="@style/Theme.AppCompat.NoActionBar"> -->
 
         <activity
             android:name=".MainActivity"
